Commit definitivo: estructura y dependencias corregidas, imports y tipos ajustados, checklist funcional, Collapsible y PhotoButton integrados. No modificar este commit.

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "sdkVersion": "53.0.0",
     
     "main": "index.js",
-    "platforms": ["ios", "android"],
+    "platforms": ["ios", "android", "web"],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",    "splash": {
