--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^53.0.20",
-    "expo-image-picker": "^16.1.4",
-    "expo-file-system": "^18.1.11",
-    "expo-modules-core": "^2.5.0",
-    "firebase": "^12.0.0",
+    "@expo/metro-runtime": "~5.0.4",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/stack": "^7.4.4",
+    "expo": "^53.0.20",
+    "expo-file-system": "^18.1.11",
+    "expo-image-picker": "^16.1.4",
+    "expo-modules-core": "^2.5.0",
+    "firebase": "^12.0.0",
     "invariant": "^2.2.4",
-    "react": "19.1.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "0.80.2",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@types/react-native": "^0.72.8",
     "typescript": "~5.8.3"
   }
 }
