--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ USE_HERMES=0
 UNIT_TEST=0
 IS_NEW_ARCHITECTURE_ENABLED=1
 RN_FABRIC_ENABLED=1
+
+# --- Firebase Configuración ---
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_APP_ID=
