--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-navigation/native": "^7.1.16",
-    "@react-navigation/stack": "^7.4.4",
+    "@google-cloud/storage": "^7.16.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "^53.0.20",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-modules-core": "^2.5.0",
     "firebase": "^12.0.0",
     "invariant": "^2.2.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "0.80.2",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "^0.79.5",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.11.1",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "~18.2.25",
     "@types/react-native": "^0.72.8",
     "typescript": "~5.8.3"
   }
