🧹 Limpieza: Eliminados archivos duplicados y actualizado .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ dist/
 web-build/
 expo-env.d.ts
 
+# Evitar duplicados de archivos
+App.tsx
+components/ui/
+src/components/ui/
+src/services/FirebaseStorageReal.ts
+
 # Native
 .kotlin/
 *.orig.*
