--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "@google-cloud/storage": "^7.16.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^53.0.20",
