--- a/app.json
+++ b/app.json
@@ -1,15 +1,19 @@
 {
   "expo": {
     "name": "ChecklistApp",
-    "slug": "checklist-app", 
+    "slug": "checklist-app",
     "version": "1.0.0",
     "sdkVersion": "53.0.0",
-    
     "main": "index.js",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",    "splash": {
+    "userInterfaceStyle": "light",
+    "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
@@ -24,6 +28,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
+      }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "58da1ceb-1de4-445e-87bf-aab9df092f4d"
       }
     }
   }
