--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~10.1.1",
     "@expo/metro-runtime": "~5.0.4",
     "@google-cloud/storage": "^7.16.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^53.0.20",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
-    "expo-modules-core": "^2.5.0",
     "firebase": "^12.0.0",
     "invariant": "^2.2.4",
     "react": "^19.0.0",
@@ -26,12 +25,12 @@
     "react-native": "^0.79.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
     "@types/react-dom": "~18.2.25",
-    "@types/react-native": "^0.72.8",
     "typescript": "~5.8.3"
   }
 }
