--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/config-plugins": "~10.1.1",
     "@expo/metro-runtime": "~5.0.4",
     "@google-cloud/storage": "^7.16.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -20,13 +21,13 @@
     "expo-image-picker": "^16.1.4",
     "firebase": "^12.0.0",
     "invariant": "^2.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "^0.79.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-web": "^0.20.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "expo-asset": "~11.1.7"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
