✅ BUILD EXITOSO: AndroidManifest fix + Firebase + Limpieza
SOLUCIONADO:
- AndroidManifest: tools:remove para conflictos AndroidX
- Firebase Cloud Storage: Restaurado funcionando
- index.js: App completa (no AppMinimal)
- gradle.properties: AndroidX configurado
- Build ID: 74af58c6-5c2a-415b-864f-88d04697f547

LIMPIEZA:
- Eliminados archivos android/ (usando CNG)
- Eliminados logos duplicados
- Eliminados archivos gradle antiguos

--- a/app.json
+++ b/app.json
@@ -27,7 +27,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.eumirblau.checklistapp",
+      "enableProguardInReleaseBuilds": false,
+      "compileSdkVersion": 35,
+      "targetSdkVersion": 35,
+      "buildToolsVersion": "35.0.0"
     },
     "extra": {
       "eas": {
@@ -35,7 +40,7 @@
       }
     },
     "plugins": [
-      "expo-asset"
+      "./plugins/withCustomAndroidManifest"
     ]
   }
 }
