--- a/eas.json
+++ b/eas.json
@@ -15,6 +15,12 @@
       "autoIncrement": true,
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "NODE_OPTIONS": "--max-old-space-size=4096"
+      },
+      "cache": {
+        "disabled": false
       }
     }
   },
