--- a/package.json
+++ b/package.json
@@ -11,27 +11,42 @@
   "dependencies": {
     "@expo/config-plugins": "~10.1.1",
     "@expo/metro-runtime": "~5.0.4",
-    "@google-cloud/storage": "^7.16.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-firebase/app": "^23.0.1",
+    "@react-native-firebase/storage": "^23.0.1",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^53.0.20",
+    "expo-asset": "~11.1.7",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
-    "firebase": "^12.0.0",
+    "firebase": "^12.1.0",
     "invariant": "^2.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "^0.79.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
-    "react-native-web": "^0.20.0",
-    "expo-asset": "~11.1.7"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
     "@types/react-dom": "~18.2.25",
     "typescript": "~5.8.3"
+  },
+  "overrides": {
+    "@expo/config-plugins": "~10.1.1"
+  },
+  "resolutions": {
+    "com.android.support:support-v4": "androidx.legacy:legacy-support-v4:1.0.0",
+    "com.android.support:appcompat-v7": "androidx.appcompat:appcompat:1.6.1",
+    "com.android.support:support-compat": "androidx.core:core:1.13.1",
+    "com.android.support:support-core-utils": "androidx.legacy:legacy-support-core-utils:1.0.0",
+    "com.android.support:support-core-ui": "androidx.legacy:legacy-support-core-ui:1.0.0",
+    "com.android.support:support-fragment": "androidx.fragment:fragment:1.6.2",
+    "com.android.support:animated-vector-drawable": "androidx.vectordrawable:vectordrawable-animated:1.1.0",
+    "com.android.support:support-vector-drawable": "androidx.vectordrawable:vectordrawable:1.1.0",
+    "com.android.support:versionedparcelable": "androidx.versionedparcelable:versionedparcelable:1.1.1"
   }
 }
