🔧 FIX: App.tsx en raíz + index.js corregido
- App.tsx: Movido a raíz con componente minimalista
- index.js: Importa ./App (no ./src/App)
- Gradle compiló exitosamente, solo falla Metro bundler
- Firebase modules funcionando correctamente

--- a/app.json
+++ b/app.json
@@ -28,11 +28,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.eumirblau.checklistapp",
-      "enableProguardInReleaseBuilds": false,
-      "compileSdkVersion": 35,
-      "targetSdkVersion": 35,
-      "buildToolsVersion": "35.0.0"
+      "package": "com.eumirblau.checklistapp"
     },
     "extra": {
       "eas": {
