--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "invariant": "^2.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "^0.79.5",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1",
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.10",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "~18.2.25",
     "typescript": "~5.8.3"
   },
@@ -48,5 +48,12 @@
     "com.android.support:animated-vector-drawable": "androidx.vectordrawable:vectordrawable-animated:1.1.0",
     "com.android.support:support-vector-drawable": "androidx.vectordrawable:vectordrawable:1.1.0",
     "com.android.support:versionedparcelable": "androidx.versionedparcelable:versionedparcelable:1.1.1"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   }
 }
