Fix: Eliminar archivos App duplicados y limpiar estructura
- Eliminado App.js vacío que causaba conflictos
- Removido App.tsx del .gitignore
- Estructura final: index.js -> App.tsx (limpio)
- Configuración de entry point corregida en package.json

--- a/app.json
+++ b/app.json
@@ -30,6 +30,10 @@
       },
       "package": "com.eumirblau.checklistapp"
     },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "runtimeVersion": "1.0.0",
     "extra": {
       "eas": {
         "projectId": "58da1ceb-1de4-445e-87bf-aab9df092f4d"
