--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nuevoproyecto",
   "version": "1.0.0",
   "private": true,
+  "main": "./index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
