--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-native-firebase/app": "^23.0.1",
     "@react-native-firebase/storage": "^23.0.1",
     "@react-native-voice/voice": "^3.2.4",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "^53.0.20",
     "expo-asset": "~11.1.7",
     "expo-file-system": "^18.1.11",
@@ -27,7 +27,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0"
   },
