--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-firebase/app": "^23.0.1",
+    "@react-native-firebase/auth": "^23.0.1",
     "@react-native-firebase/storage": "^23.0.1",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.1.18",
