Limpieza de archivos: eliminados AuthServices y LoginScreens duplicados
- Eliminados AuthServiceSimple, AuthServiceManual, AuthServiceSafe, AuthServiceSafeV2, MockAuthService
- Eliminados LoginScreenHybrid, LoginScreenTemp, LoginScreenProduction
- Solo queda AuthService.ts y LoginScreen.tsx (versiones principales)
- LoginScreen actualizado para usar AuthService original
- Proyecto limpio y organizado

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 NODE_ENV=development
-REACT_NATIVE_TARGET_VERSION=79
-USE_HERMES=0
-UNIT_TEST=0
-IS_NEW_ARCHITECTURE_ENABLED=1
-RN_FABRIC_ENABLED=1
+REACT_NATIVE_TARGET_VERSION=0.79.5
+USE_HERMES=true
+UNIT_TEST=false
+IS_NEW_ARCHITECTURE_ENABLED=false
+RN_FABRIC_ENABLED=false
 
 # --- Firebase Configuración ---
 FIREBASE_API_KEY=
