--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.0",
     "@types/react": "~19.0.10",
     "@types/react-dom": "~18.2.25",
     "typescript": "~5.8.3"
