--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.eumirblau.checklistapp"
+      "package": "com.eumirblau.checklistapp",
+      "googleServicesFile": "./google-services.json"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -40,7 +41,8 @@
       }
     },
     "plugins": [
-      "./plugins/withCustomAndroidManifest"
+      "./plugins/withCustomAndroidManifest",
+      "@react-native-firebase/app"
     ]
   }
 }
