--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/runtime": "^7.28.3",
     "@expo/config-plugins": "~10.1.1",
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-firebase/app": "^23.0.1",
-    "@react-native-firebase/auth": "^23.0.1",
-    "@react-native-firebase/storage": "^23.0.1",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/auth": "^22.4.0",
+    "@react-native-firebase/storage": "^22.4.0",
     "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
