chore(cleanup): elimina duplicados y archivos innecesarios; integra voz estable\n\n- Borra src/App.tsx (no usado; raíz usa App.tsx)\n- Borra src/components/VoiceButtonSimple.tsx (sin referencias)\n- Borra src/services/AuthServiceNative.ts (vacío/no usado)\n- Borra src/global.d.ts (duplicado; se mantiene en raíz)\n- Borra backups y logs: VoiceButton.tsx.backup, logcat_voice_test.txt\n- Refuerza .gitignore para evitar reaparición de estos archivos\n\nVoz: @react-native-voice/voice via plugin Expo; New Architecture OFF.\nVerificado build y transcripción funcionando.

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,13 @@ src/services/AuthServiceWebSimple.ts
 src/utils/NavigationUtils.ts
 services/ApiService.ts
 debug.js
+src/App.tsx
+src/components/VoiceButtonSimple.tsx
+src/services/AuthServiceNative.ts
+src/global.d.ts
+**/*.backup
+logcat_*.txt
+*.log
 
 # Ignorar archivos fantasma de TypeScript
 **/*AuthServiceWeb*
