--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "^53.0.20",
     "expo-asset": "~11.1.7",
+    "expo-dev-client": "^5.2.4",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
     "firebase": "^12.1.0",
@@ -33,7 +34,8 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-speech": "~13.1.7"
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.0.0",
