--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,7 @@
     "production": {
       "autoIncrement": true,
       "android": {
-        "buildType": "apk"
+        "buildType": "app-bundle"
       },
       "env": {
         "NODE_OPTIONS": "--max-old-space-size=4096"
