chore(repo): ignore build-export artifacts and untrack from git

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ types/
 src/config/firebase.ts
 src/config/firebaseInit.ts
 components/Collapsible.tsx
+build-export/
 
 # Ignorar archivos fantasma de TypeScript
 **/*AuthServiceWeb*
