fix(voice): Android release mic start (permissions, ProGuard, reset, locales)

--- a/app.json
+++ b/app.json
@@ -33,6 +33,7 @@
       "jsEngine": "hermes",
       "permissions": [
         "RECORD_AUDIO",
+  "MODIFY_AUDIO_SETTINGS",
         "INTERNET",
         "ACCESS_NETWORK_STATE"
       ]
